Frontend 05.05 prefixes are added

--- a/Frontend/05.05.2017/css/main.css
+++ b/Frontend/05.05.2017/css/main.css
@@ -22,6 +22,7 @@ body h2 {
 	text-align: center;
 	font-weight: 100;
 	letter-spacing: 5px;
+	-webkit-transition: color 1.5s;
 	transition: color 1.5s;
 }
 
@@ -50,72 +51,126 @@ body .box2 {
 	margin: 0 auto 50px;
 	padding: 10px;
 	border: 2px solid silver;
-	border-radius: 5px;
-	transition: transform 2s; 
+	-webkit-border-radius: 5px;
+	        border-radius: 5px;
+	-webkit-transition: -webkit-transform 2s;
+	transition: -webkit-transform 2s;
+	transition: transform 2s;
+	transition: transform 2s, -webkit-transform 2s; 
+	display: -webkit-box; 
+	display: -webkit-flex; 
+	display: -ms-flexbox; 
 	display: flex;
-	justify-content: space-around;
-	flex-flow: row wrap;
+	-webkit-justify-content: space-around;
+	    -ms-flex-pack: distribute;
+	        justify-content: space-around;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	-webkit-flex-flow: row wrap;
+	    -ms-flex-flow: row wrap;
+	        flex-flow: row wrap;
 }
 
 body .box:hover,
 body .box2:hover {
-	transform: scale(1.1);
+	-webkit-transform: scale(1.1);
+	    -ms-transform: scale(1.1);
+	        transform: scale(1.1);
 }
 
 body .item {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
 	padding: 50px;
 	border: 2px solid silver;
-	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	        border-radius: 5px;
+	-webkit-transition: -webkit-transform 2s;
+	transition: -webkit-transform 2s;
 	transition: transform 2s;
-	transform-style: preserve-3d;
+	transition: transform 2s, -webkit-transform 2s;
+	-webkit-transform-style: preserve-3d;
+	        transform-style: preserve-3d;
 	font-size: 20px;
 }
 
 body .item:hover {
-	transform: rotate3d(0, 1, 0, 360deg);
+	-webkit-transform: rotate3d(0, 1, 0, 360deg);
+	        transform: rotate3d(0, 1, 0, 360deg);
 }
 
 body .box .class1 {
-	order: 3;
+	-webkit-box-ordinal-group: 4;
+	-webkit-order: 3;
+	    -ms-flex-order: 3;
+	        order: 3;
 }
 
 body .box .class2 {
-	order: 2;
+	-webkit-box-ordinal-group: 3;
+	-webkit-order: 2;
+	    -ms-flex-order: 2;
+	        order: 2;
 }
 
 body .box .class3 {
-	order: 1;
+	-webkit-box-ordinal-group: 2;
+	-webkit-order: 1;
+	    -ms-flex-order: 1;
+	        order: 1;
 }
 
 body .box2 .p1,
 body .box2 .p2 {
-	justify-content: center;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 	margin-left: 10px;
 }
 
 body .box2 .p1 {
-	flex-grow: 2;
+	-webkit-box-flex: 2;
+	-webkit-flex-grow: 2;
+	    -ms-flex-positive: 2;
+	        flex-grow: 2;
 }
 
 body .box2 .p2 {
-	flex-grow: 1;
+	-webkit-box-flex: 1;
+	-webkit-flex-grow: 1;
+	    -ms-flex-positive: 1;
+	        flex-grow: 1;
 }
 
 body .grid {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
-	align-content: flex-end;
-	align-items: flex-end;
+	-webkit-box-align: end;
+	-webkit-align-items: flex-end;
+	    -ms-flex-align: end;
+	        align-items: flex-end;
 	width: 1000px;
 	margin: 0 auto 50px;
 	padding: 10px;
 	border: 2px solid silver;
-	border-radius: 5px;
-	transition: transform 2s; 
+	-webkit-border-radius: 5px;
+	        border-radius: 5px;
+	-webkit-transition: -webkit-transform 2s;
+	transition: -webkit-transform 2s;
+	transition: transform 2s;
+	transition: transform 2s, -webkit-transform 2s; 
 	height: 400px;
 }
 
 body .grid div {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
 	width: 100px;
 	height: 100px;
@@ -123,33 +178,66 @@ body .grid div {
 }
 
 body .grid:hover {
-	transform: scale(1.1);
+	-webkit-transform: scale(1.1);
+	    -ms-transform: scale(1.1);
+	        transform: scale(1.1);
 }
 
 body .grid div:hover {
-	animation: bounce 1s;
+	-webkit-animation: bounce 1s;
+	        animation: bounce 1s;
+}
+
+@-webkit-keyframes bounce {
+  from, 20%, 50%, 80%, to {
+    -webkit-transform: translate3d(0,0,0);
+            transform: translate3d(0,0,0);
+  }
+
+  40% {
+    -webkit-transform: translate3d(0, -30px, 0);
+            transform: translate3d(0, -30px, 0);
+  }
+
+  70% {
+    -webkit-transform: translate3d(0, -15px, 0);
+            transform: translate3d(0, -15px, 0);
+  }
+
+  90% {
+    -webkit-transform: translate3d(0,-4px,0);
+            transform: translate3d(0,-4px,0);
+  }
 }
 
 @keyframes bounce {
   from, 20%, 50%, 80%, to {
-    transform: translate3d(0,0,0);
+    -webkit-transform: translate3d(0,0,0);
+            transform: translate3d(0,0,0);
   }
 
   40% {
-    transform: translate3d(0, -30px, 0);
+    -webkit-transform: translate3d(0, -30px, 0);
+            transform: translate3d(0, -30px, 0);
   }
 
   70% {
-    transform: translate3d(0, -15px, 0);
+    -webkit-transform: translate3d(0, -15px, 0);
+            transform: translate3d(0, -15px, 0);
   }
 
   90% {
-    transform: translate3d(0,-4px,0);
+    -webkit-transform: translate3d(0,-4px,0);
+            transform: translate3d(0,-4px,0);
   }
 }
 
 body .grid2 {
-	flex-flow: row-reverse wrap;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: reverse;
+	-webkit-flex-flow: row-reverse wrap;
+	    -ms-flex-flow: row-reverse wrap;
+	        flex-flow: row-reverse wrap;
 }
 
 /* ---------- LAST TASK  ---------- */
@@ -158,6 +246,8 @@ body .grid2 {
 	height: 100%;
 	padding: 50px 0;
 	color: white;
+	background: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,.5)), to(rgba(0,0,0,.5))), url(../img/bg2.jpg) no-repeat center center;
+	background: -webkit-linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url(../img/bg2.jpg) no-repeat center center;
 	background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url(../img/bg2.jpg) no-repeat center center;
 	background-size: cover;
 }
@@ -167,7 +257,8 @@ body .grid2 {
 	width: 1000px;
 	padding: 10px;
 	margin: 20px auto;
-	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	        border-radius: 5px;
 	margin-bottom: 20px;
 	border: 2px solid silver;
 }
@@ -181,28 +272,47 @@ body .grid2 {
 .wrapper_2 .wrapContent {
 	width: 1024px;
 	margin: 20px auto;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
-	flex-flow: row nowrap;
-	justify-content: space-between; 
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	-webkit-flex-flow: row nowrap;
+	    -ms-flex-flow: row nowrap;
+	        flex-flow: row nowrap;
+	-webkit-box-pack: justify;
+	-webkit-justify-content: space-between;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between; 
 	margin-bottom: 20px;
 }
 
 .wrapper_2 .wrapContent nav,
 .wrapper_2 .wrapContent article,
 .wrapper_2 .wrapContent aside {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
-	flex-flow: column wrap;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-webkit-flex-flow: column wrap;
+	    -ms-flex-flow: column wrap;
+	        flex-flow: column wrap;
 	padding: 20px;
 	border: 2px solid silver;
 	margin-left: 1px;
 }
 
 .wrapper_2 .wrapContent nav {
-	border-radius: 5px 0 0 5px;
+	-webkit-border-radius: 5px 0 0 5px;
+	        border-radius: 5px 0 0 5px;
 }
 
 .wrapper_2 .wrapContent aside {
-	border-radius: 0 5px 5px 0;
+	-webkit-border-radius: 0 5px 5px 0;
+	        border-radius: 0 5px 5px 0;
 }
 
 .wrapper_2 .wrapContent nav ul {
