front 13.05 small code optimization

--- a/Frontend/13.05.2017/2/style.css
+++ b/Frontend/13.05.2017/2/style.css
@@ -10,7 +10,7 @@ body .wrapper {
 	flex-flow: row wrap;
 	justify-content: space-around;
 	align-items: center;
-	padding-top: 200px;
+	padding: 200px 0;
 }
 
 body .wrapper div {
